migrated types